library/general/requiredlabels/samples/all-must-have-owner/example_allowed.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: allowed-namespace
  labels:
    owner: user.agilebank.demo
spec: {}
status: {}
